12-k8s-3.3/deploy/2-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: nginx
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
      - name: nginx
        configMap:
          name: backend-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: app
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
  selector:
    app: backend
