12-k8s-3.3/deploy/3-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: cache
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          volumeMounts:
          - mountPath: /usr/share/nginx/html/
            name: nginx
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
      - name: nginx
        configMap:
          name: cache-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
  selector:
    app: cache
